# acados

./: .add_license.sh  .appveyor.yml  .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis_cmake.yml  .travis_install.sh  CMakeConfig.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  COPYING  CPPLINT.cfg  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  Makefile.osqp  Makefile.rule  PR_DESCRIPTION.md  README.md  ROADMAP.md  TODO_ddp.md  TODO_integrator_interface.md  TODO_maintenance.md  TODOs.md  [!]  acados_install.sh  build.sh  convention_about_external_functions.txt  cpplint.py  install.sh  install_packages.sh  notes.md  pyproject.toml  rebuild.sh  (+5 more)
acados/: CMakeLists.txt  Makefile  acados_types.h  condensing.c  condensing.h  erk_integrator.c  erk_integrator.h  model.c  model.h  ocp_qp_common.h  ocp_qp_condensing_qpoases.c  ocp_qp_condensing_qpoases.h  ocp_qp_hpmpc.c  ocp_qp_hpmpc.h  ocp_qp_solver.c  package.xml  print.c  print.h  tools.h  types.h
acados/acados/: CMakeLists.txt  Makefile
acados/broken_src/: ocp_nlp_sm_common.h  ocp_nlp_sm_gn.h  ocp_nlp_sqp_bkp.c
acados/cmake/: FindEigen3.cmake  FindMatlab.cmake  Lint.cmake  Toolchain-dSpaceDS1401.cmake  Toolchain-dSpaceDS1403.cmake  Toolchain-mingw32.cmake  clean.cmake
acados/dense_qp/: Makefile  dense_qp_common.c  dense_qp_common.h  dense_qp_common_ext_dep.c  dense_qp_common_ext_dep.h  dense_qp_daqp.c  dense_qp_daqp.h  dense_qp_hpipm.c  dense_qp_hpipm.h  dense_qp_hpipm_ext_dep.c  dense_qp_hpipm_ext_dep.h  dense_qp_ooqp.c  dense_qp_ooqp.h  dense_qp_qore.c  dense_qp_qore.h  dense_qp_qpoases.c  dense_qp_qpoases.h  dense_qp_qpoases_ext_dep.c  dense_qp_qpoases_ext_dep.h
acados/docs/: requirements.txt
acados/examples/: CMakeLists.txt
acados/include/: ocp_qp_solver.h
acados/ocp_lin/: ocp_lin_common.h
acados/ocp_linearization/: ocp_linearization_common.h
acados/ocp_nlp/: .ocp_nlp_cost.c.swo  .ocp_nlp_cost.h.swo  .ocp_nlp_gn_sqp.c.swo  Makefile  allocate_ocp_nlp.c  allocate_ocp_nlp.h  ocp_nlp_common.c  ocp_nlp_common.h  ocp_nlp_constraints.c  ocp_nlp_constraints.h  ocp_nlp_constraints_bgh.c  ocp_nlp_constraints_bgh.h  ocp_nlp_constraints_bghp.c  ocp_nlp_constraints_bghp.h  ocp_nlp_constraints_bgp.c  ocp_nlp_constraints_bgp.h  ocp_nlp_constraints_common.c  ocp_nlp_constraints_common.h  ocp_nlp_cost.c  ocp_nlp_cost.h  ocp_nlp_cost_common.c  ocp_nlp_cost_common.h  ocp_nlp_cost_conl.c  ocp_nlp_cost_conl.h  ocp_nlp_cost_external.c  ocp_nlp_cost_external.h  ocp_nlp_cost_ls.c  ocp_nlp_cost_ls.h  ocp_nlp_cost_nls.c  ocp_nlp_cost_nls.h  ocp_nlp_ddp.c  ocp_nlp_ddp.h  ocp_nlp_dynamics.c  ocp_nlp_dynamics.h  ocp_nlp_dynamics_common.c  ocp_nlp_dynamics_common.h  ocp_nlp_dynamics_cont.c  ocp_nlp_dynamics_cont.h  ocp_nlp_dynamics_disc.c  ocp_nlp_dynamics_disc.h  (+49 more)
acados/ocp_qp/: Makefile  allocate_ocp_qp.c  allocate_ocp_qp.h  condensing.c  condensing.h  condensing_helper_functions.c  ocp_qp_clarabel.c  ocp_qp_clarabel.h  ocp_qp_common.c  ocp_qp_common.h  ocp_qp_common_ext_dep.c  ocp_qp_common_ext_dep.h  ocp_qp_common_frontend.c  ocp_qp_common_frontend.h  ocp_qp_condensing.c  ocp_qp_condensing.h  ocp_qp_condensing_ext_dep.c  ocp_qp_condensing_ext_dep.h  ocp_qp_condensing_hpipm.c  ocp_qp_condensing_hpipm.h  ocp_qp_condensing_hpipm_ext_dep.c  ocp_qp_condensing_hpipm_ext_dep.h  ocp_qp_condensing_qpoases.c  ocp_qp_condensing_qpoases.h  ocp_qp_condensing_qpoases_ext_dep.c  ocp_qp_condensing_qpoases_ext_dep.h  ocp_qp_condensing_solver.c  ocp_qp_condensing_solver.h  ocp_qp_full_condensing.c  ocp_qp_full_condensing.h  ocp_qp_full_condensing_solver.c  ocp_qp_full_condensing_solver.h  ocp_qp_hpipm.c  ocp_qp_hpipm.h  ocp_qp_hpipm_ext_dep.c  ocp_qp_hpipm_ext_dep.h  ocp_qp_hpmpc.c  ocp_qp_hpmpc.h  ocp_qp_ooqp.c  ocp_qp_ooqp.h  (+13 more)
acados/sim/: Makefile  allocate_sim.c  allocate_sim.h  casadi_wrapper.c  casadi_wrapper.h  change_name.sh  model.c  model.h  model_wrapper.c  model_wrapper.h  sim_algebraic_solver.c  sim_algebraic_solver.h  sim_casadi_wrapper.c  sim_casadi_wrapper.h  sim_collocation.c  sim_collocation.h  sim_collocation_utils.c  sim_collocation_utils.h  sim_common.c  sim_common.h  sim_common_yt.c  sim_common_yt.h  sim_discrete_model.c  sim_discrete_model.h  sim_erk_integrator.c  sim_erk_integrator.h  sim_erk_integrator_yt.c  sim_erk_integrator_yt.h  sim_gnsf.c  sim_gnsf.h  sim_gnsf2.c  sim_gnsf2.h  sim_gnsf_casadi_wrapper.c  sim_gnsf_casadi_wrapper.h  sim_irk_integrator.c  sim_irk_integrator.h  sim_irk_integrator_yt.c  sim_irk_integrator_yt.h  sim_lifted_irk_integrator.c  sim_lifted_irk_integrator.h  (+6 more)
acados/src/: Makefile  ocp_qp_solver.c  tools.c
acados/test/: CMakeLists.txt  Makefile  Makefile.rule  dummy_main.c  test_acados_ocp_qp_interface.c  test_acados_ocp_qp_interface_condensing.c  test_ocp_qp_solver.c  tools.c  tools.h
acados/utils/: CPPLINT.cfg  Makefile  allocate_ocp_qp.c  allocate_ocp_qp.h  allocate_ocp_qp_in.c  allocate_ocp_qp_in.h  casadi_wrapper.c  casadi_wrapper.h  copy.c  copy.h  create.c  create.h  external_function.c  external_function.h  external_function_generic.c  external_function_generic.h  math.c  math.h  mem.c  mem.h  print.c  print.h  read_ocp_qp_in.c  (+8 more)
acados_python/: package.xml
examples/: CMakeLists.txt  Makefile  example_linear_mpc.c  test_chain.c  test_nmpc.c  test_nmpc_hpmpc.c  test_nmpc_hpnmpc.c  test_nmpc_pendulum_hpmpc_libstr.c  test_nmpc_pendulum_hpmpc_libstr_pt.c  test_ocp_nlp.c  test_ocp_nlp_hpnmpc.c  test_ocp_nlp_hpnmpc_delta_form.c  test_ocp_qp_condensing_qpoases.c  test_ocp_qp_hpmpc.c  test_ocp_qp_hpmpc_libstr.c  test_ocp_qp_hpmpc_libstr_partial_tightening.c  test_ocp_qp_hpmpc_libstr_partial_tightening2.c  test_ocp_qp_hpmpc_libstr_temp.c
swig/: CMakeLists.txt  CPPLINT.cfg  acados.i  conversions.h  conversions.i  integrator.i  list_of_arrays.py  numpy.i  ocp_nlp.i  ocp_qp.i  ocp_typemaps.i  test.h  test_ocp_nlp.py  test_ocp_qp.py  test_swig.py
test/: CMakeLists.txt  Makefile  Makefile.rule  all_tests.cpp  read_matrix.cpp  test_chain.c  test_nmpc.c  test_ocp_qp_condensing_qpoases.c  test_ocp_qp_hpmpc.c  test_ocp_qp_solver.c  test_sqp.c
(+3533 files in other folders)
